--- a/pug/index.pug
+++ b/pug/index.pug
@@ -1,6 +1,18 @@
 extend ../components/template.pug
 block content
     .container
-    section.principal 
-     .principal__contenido
-    h1 hola
+        section.principal
+            .principal__contenido
+                p LO FAMILIAR  #[br] lo volvemos #[br] #[strong INSTITUCIONAL]
+        section.contentindex
+            .contentindex__txt1
+              p SOLUCIONES #[br] #[strong EFICACES] #[br] A SU EMPRESA
+        section.objetivos
+            .objetivos__contenido
+                p DEFINIMOS  #[br] #[strong OBJETIVOS #[br] PUNTUALES]
+                p PARA TU EMPRESA
+        section.arrow 
+            .arrow__contenido
+                img(src="images/iconos/arrow_index.svg", alt="Ícono de grafica")
+                p ACELERA LA #[br] #[strong PRODUCTIVIDAD]    
+                p DE TU #[br] #[strong EQUIPO DE VENTAS]   
