--- a/pug/index.pug
+++ b/pug/index.pug
@@ -13,6 +13,17 @@ block content
                 p PARA TU EMPRESA
         section.arrow 
             .arrow__contenido
-                img(src="images/iconos/arrow_index.svg", alt="Ícono de grafica")
-                p ACELERA LA #[br] #[strong PRODUCTIVIDAD]    
-                p DE TU #[br] #[strong EQUIPO DE VENTAS]   
+                p ACELERA LA #[br] #[strong PRODUCTIVIDAD] DE TU #[br] #[strong EQUIPO DE VENTAS]  
+        section.ajedrez 
+            .ajedrez__contenido
+                img(src="images/iconos/ajedrez_index.svg", alt="Ícono de Pieza ajedrez")
+                p DISEÑAMOS #[br] #[strong ESTRATEGIAS] #[br] #[strong ECHAS A LA MEDIDA]   
+        section.utilidades
+            .utilidades__contenido
+                p #[strong INCREMENTE UTILIDADES] #[br] ESTABLECIENDO LAS  #[br] MEJORES #[strong ESTRATEGIAS FISCALES]     
+        section.especialistas
+            .especialistas__contenido
+                p SOMOS #[br] #[strong ESPECIALISTAS] #[br] #[strong EN EMPRESAS FAMILIARES] 
+        section.implementacion
+            .implementacion__contenido
+                p #[strong IMPLEMENTAMOS] #[br] REQUISITOS PARA #[strong CUMPLIR] #[br] CON LINEAMIENTO DE LA #[br] #[strong NOM-035]  ANTE LA #[strong STPS]
