--- a/css/style.css
+++ b/css/style.css
@@ -111,7 +111,7 @@ header .menu__img {
   font-size: 23px;
   border: 2px solid #D8A800;
   border-radius: 30px;
-  margin: 30px;
+  margin: 48px;
   padding: 10px;
   line-height: 25px;
 }
@@ -160,7 +160,7 @@ header .menu__img {
   color: #FFF;
 }
 .objetivos__contenido p:nth-child(2) {
-  margin-top: 0;
+  margin-top: -14px;
   margin-bottom: 1rem;
   padding: 10px;
   font-family: 'Raleway', sans-serif;
@@ -169,6 +169,180 @@ header .menu__img {
   color: #FFF;
 }
 .objetivos__contenido strong {
+  font-size: 30px;
+}
+.arrow__contenido {
+  max-width: 100%;
+  margin: 0 auto;
+  background-image: url(/images/iconos/arrow_index.svg);
+  opacity: 0.9;
+  background-position: right top;
+  background-size: 170px;
+  background-repeat: no-repeat;
+  margin-top: 50px;
+  width: auto;
+  height: 257px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  font-size: 25px;
+  text-align: center;
+  margin-top: 80px;
+}
+.arrow__contenido p {
+  line-height: 30px;
+  text-align: center;
+  font-size: 30px;
+}
+.ajedrez {
+  max-width: 100%;
+  margin: 0 auto;
+  background-image: url(/images/mobile/img2.jpg);
+  opacity: 0.9;
+  background-position: center top;
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: auto;
+  height: 320px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.ajedrez__contenido {
+  background: #222222;
+  background: linear-gradient(-195deg, rgba(34, 34, 34, 0.6) 35%, rgba(34, 34, 34, 0.6) 100%);
+  width: 100%;
+  padding: 30px;
+  position: absolute;
+  bottom: -222vw;
+}
+.ajedrez__contenido img {
+  width: auto;
+  height: 95px;
+  position: absolute;
+  bottom: 15vw;
+}
+.ajedrez__contenido p {
+  margin-top: 0;
+  margin-bottom: 1rem;
+  padding: 10px;
+  font-family: 'Raleway', sans-serif;
+  font-size: 29px;
+  line-height: 26px;
+  color: #FFF;
+  text-align: right;
+  position: relative;
+  bottom: -8vw;
+}
+.ajedrez__contenido strong {
+  font-size: 30px;
+  color: #FFF;
+  line-height: 15px;
+}
+.utilidades {
+  text-align: justify;
+  font-size: 20px;
+  margin: 35px;
+  line-height: 26px;
+}
+.utilidades strong {
+  font-size: 30px;
+}
+.especialistas {
+  max-width: 100%;
+  margin: 0 auto;
+  background-image: url(/images/mobile/img3.jpg);
+  opacity: 0.9;
+  background-position: center top;
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: auto;
+  height: 320px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: left;
+      -ms-flex-align: left;
+          align-items: left;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.especialistas__contenido {
+  background: #222222;
+  background: linear-gradient(-195deg, rgba(34, 34, 34, 0.6) 35%, rgba(34, 34, 34, 0.6) 100%);
+  width: 79%;
+  padding: 30px;
+  position: relative;
+  bottom: -49px;
+}
+.especialistas__contenido p {
+  margin-top: 0;
+  margin-bottom: 1rem;
+  border-bottom: 2px solid #D8A800;
+  padding: 10px;
+  font-family: 'Raleway', sans-serif;
+  font-size: 25px;
+  color: #FFF;
+  line-height: 20px;
+}
+.implementacion {
+  max-width: 100%;
+  margin: 0 auto;
+  background-image: url(/images/iconos/chek_index.svg);
+  opacity: 0.9;
+  background-position: right top;
+  background-size: 170px;
+  background-repeat: no-repeat;
+  margin-top: 50px;
+  width: auto;
+  height: 320px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-align: center;
+  font-size: 25px;
+}
+.implementacion p {
+  font-size: 20px;
+  margin-bottom: 98px;
+  line-height: 30px;
+}
+.implementacion strong {
   font-size: 30px;
 }
 footer {
