--- a/css/style.less
+++ b/css/style.less
@@ -287,6 +287,164 @@ header {
     font-size: 30px;
    }
 }
+.qsomos{
+  max-width: 100%;
+  margin: 0 auto;
+  background-image: url(/images/mobile/qsomos.jpg);
+  opacity: .9;
+  background-position: center top;
+  background-size: cover;
+  background-repeat: no-repeat;
+
+  width: auto;
+  height: 320px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  &__title{
+  background: rgb(34,34,34);
+  background: linear-gradient(-195deg, rgba(34,34,34,0.6) 35%, rgba(34,34,34,0.6) 100%);
+  width: 100%;
+  padding: 27px;
+  position: absolute;
+  bottom: 370px;
+  margin-top: auto;
+  }
+  P{
+    color: #FFF;
+    font-size: 27px;
+    border-left: 2px solid #D8A800;
+  }
+  strong{
+    font-size: 50px;
+    line-height: 30px;
+  }
+}
+.one{
+  margin: 25px 0px 25px;
+  width: 300px;
+  height: 120px;
+  padding: 10px;
+  border-radius: 45px 0px 0px 45px; 
+  background: rgb(12,29,46);
+  background: linear-gradient(-195deg, rgba(12,29,46,0.5) 35%, rgba(12,29,46,0.5) 51%);
+  color: #FFF;
+  text-align: justify; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  float: right;
+  &__contenido{
+    line-height: 15px;
+    p{
+     font-family: 'Inter', sans-serif;
+     font-size: 12px
+    } 
+  }
+  strong {
+    font-size: 16px
+  }
+}
+.two{
+  margin: 25px 0px 25px;
+  width: 300px;
+  height: 120px;
+  padding: 10px;
+  border-radius: 0px 45px 45px 0px; 
+  background: rgb(216,168,0);
+  background: linear-gradient(-195deg, rgba(216,168,0,0.5942752100840336) 35%, rgba(216,168,0,0.4962359943977591) 51%);
+  text-align: justify; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  &__contenido{
+    line-height: 15px;
+    p{
+     font-family: 'Inter', sans-serif;
+     font-size: 12px
+    } 
+  }
+  strong {
+    font-size: 16px
+  }
+}
+.three{
+  margin: 12px 0px 25px;
+  width: 328px;
+  height: 131px;
+  padding: 10px;
+  border-radius: 50px 0px 0px 50px; 
+  background: rgb(12,29,46);
+  background: linear-gradient(-195deg, rgba(12,29,46,0.5) 35%, rgba(12,29,46,0.5) 51%);
+  color: #FFF;
+  text-align: justify; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  float: right;
+  &__contenido{
+    line-height: 15px;
+    p{
+     font-family: 'Inter', sans-serif;
+     font-size: 12px
+    } 
+  }
+  strong {
+    font-size: 15px
+  }
+}
+.four{
+  margin: 25px 0px 25px;
+  width: 300px;
+  height: 120px;
+  padding: 10px;
+  border-radius: 0px 45px 45px 0px; 
+ 
+  text-align: justify; 
+  display: flex;
+  justify-content: center;
+  align-items: center; 
+  background: rgb(216,168,0);
+  background: linear-gradient(-195deg, rgba(216,168,0,0.5942752100840336) 35%, rgba(216,168,0,0.4962359943977591) 51%);
+  &__contenido{
+    line-height: 15px;
+    p{
+     font-family: 'Inter', sans-serif;
+     font-size: 12px
+    } 
+  }
+  strong {
+    font-size: 16px
+  }
+}
+.qcontacto{
+  max-width: 100%;
+  margin: 0 auto;
+  background-image: url(/images/mobile/index.png);
+	opacity: .9;
+	background-position: center top;
+	background-size: cover;
+	background-repeat: no-repeat;
+
+	width: auto;
+	height: 257px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+  &__title{
+    background: rgb(34,34,34);
+    background: linear-gradient(-195deg, rgba(34,34,34,0.6) 35%, rgba(34,34,34,0.6) 100%);
+		color: #FFF;
+    width: 100%;
+		padding: 30px;
+    position: absolute;
+    bottom: 330px;
+    font-size: 30px;
+  }
+}
 footer{
   background-color: #1A3A58;
   color: #ffff;
