--- a/components/header.html
+++ b/components/header.html
@@ -6,8 +6,8 @@
       <ul class="menu__links"> 
         <h2>Menú</h2>
         <li class="menu__item"> <a class="menu__link" href="index.html">Inicio</a></li>
-        <li class="menu__item"> <a class="menu__link" href="#">¿Quienes somos?</a></li>
-        <li class="menu__item"> <a class="menu__link" href="#">Contacto</a></li>
+        <li class="menu__item"> <a class="menu__link" href="somos.html">¿Quienes somos?</a></li>
+        <li class="menu__item"> <a class="menu__link" href="contacto.html">Contacto</a></li>
         <li class="menu__item"> <a class="menu__link" href="#">Iniciar sesion</a></li>
       </ul>
       <div class="menu__hamburger"> <img class="menu__img" src="images/iconos/menu.svg" alt="icono de menu"/></div>
