--- a/components/header.pug
+++ b/components/header.pug
@@ -7,9 +7,9 @@ header
                 li.menu__item 
                     a(href="index.html").menu__link Inicio
                 li.menu__item 
-                    a(href="#").menu__link ¿Quienes somos?
+                    a(href="somos.html").menu__link ¿Quienes somos?
                 li.menu__item 
-                    a(href="#").menu__link Contacto
+                    a(href="contacto.html").menu__link Contacto
                 li.menu__item 
                     a(href="#").menu__link Iniciar sesion
             .menu__hamburger 
