--- a/components/header.pug
+++ b/components/header.pug
@@ -11,6 +11,6 @@ header
                 li.menu__item 
                     a(href="contacto.html").menu__link Contacto
                 li.menu__item 
-                    a(href="#").menu__link Iniciar sesion
+                    a(href="login.html").menu__link Iniciar sesion
             .menu__hamburger 
                 img(src="images/iconos/menu.svg" alt="icono de menu").menu__img
