--- a/css/style.css
+++ b/css/style.css
@@ -535,11 +535,210 @@ header .menu__img {
   background: #222222;
   background: linear-gradient(-195deg, rgba(34, 34, 34, 0.6) 35%, rgba(34, 34, 34, 0.6) 100%);
   color: #FFF;
-  width: 100%;
-  padding: 30px;
+  width: 57%;
+  height: 105px;
+  padding: 31px;
   position: absolute;
   bottom: 330px;
   font-size: 30px;
+  right: 0px;
+}
+.qcontacto__title p {
+  border-left: 2px solid #D8A800;
+  -webkit-box-align: right;
+      -ms-flex-align: right;
+          align-items: right;
+  line-height: 25px;
+  text-align: right;
+}
+.infoContacto {
+  margin: 20px;
+}
+.infoContacto__one {
+  margin: 0px 0px 15px 150px;
+  width: 191px;
+  text-align: justify;
+  font-family: 'Inter', sans-serif;
+  font-size: 14px;
+}
+.infoContacto__two {
+  width: 191px;
+  text-align: justify;
+  font-family: 'Inter', sans-serif;
+  font-size: 14px;
+}
+.infoContacto__three {
+  margin: 0px 0px 0px 150px;
+  width: 191px;
+  text-align: justify;
+  font-family: 'Inter', sans-serif;
+  font-size: 14px;
+}
+.login {
+  background: #0c1d2e;
+  background: linear-gradient(-195deg, rgba(12, 29, 46, 0.5) 35%, rgba(12, 29, 46, 0.5) 51%);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+          box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  margin: 60px 30px;
+  padding: 20px;
+  border-radius: 20px;
+}
+.login img {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100px;
+  height: auto;
+}
+.login__title.title {
+  margin-bottom: 30px;
+  font-size: 16px;
+  border-bottom: 2px solid #D8A800;
+}
+.login__formLogin {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.login__formLogin__box .form-group {
+  border-radius: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  padding: 5px;
+  width: 300px;
+  font-size: 14px;
+  font-family: 'Raleway', sans-serif;
+}
+.login__formLogin__box .form-group label {
+  text-align: center;
+  font-size: 1.6rem;
+}
+.login__formLogin__box .form-group .icono {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 10px;
+}
+.login__formLogin__box .form-group .icono img {
+  width: 20px;
+}
+.login__formLogin button {
+  background: #1A3A58;
+  border-color: #1A3A58;
+  font-size: 13px;
+  color: white !important;
+  font-weight: 600;
+  width: 100px;
+  height: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.login__formLogin .form-group.form-check {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.login .content-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 20px auto;
+}
+.login .content-form label {
+  font-size: 1.4rem;
+}
+.login .content-form input {
+  width: 300px;
+}
+.login .content-form button {
+  text-align: center;
+  width: 100%;
+  background-color: #020202;
+  border: none;
+  font-size: 1.4rem;
+  margin: 20px auto;
+}
+.login .content-form .modal-title {
+  font-size: 2rem;
+}
+.usuario {
+  margin: 30px;
+}
+.usuario .user {
+  text-align: center;
+  font-size: 20px;
+  border-bottom: 2px solid #D8A800;
+}
+.usuario .user img {
+  width: 45px;
+  height: 45px;
+}
+.caja {
+  margin-bottom: 150px;
+  margin-top: 150px;
+  font-size: 14px;
+  text-align: center;
+  line-height: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+.caja img {
+  width: 30px;
+  height: 30px;
 }
 footer {
   background-color: #1A3A58;
