--- a/css/style.less
+++ b/css/style.less
@@ -32,6 +32,7 @@ header {
    right: 0;
   }
 }
+//index
 .principal{
   max-width: 100%;
   margin: 0 auto;
@@ -287,6 +288,7 @@ header {
     font-size: 30px;
    }
 }
+//Quienes somos
 .qsomos{
   max-width: 100%;
   margin: 0 auto;
@@ -419,6 +421,7 @@ header {
     font-size: 16px
   }
 }
+//Contacto
 .qcontacto{
   max-width: 100%;
   margin: 0 auto;
@@ -438,11 +441,162 @@ header {
     background: rgb(34,34,34);
     background: linear-gradient(-195deg, rgba(34,34,34,0.6) 35%, rgba(34,34,34,0.6) 100%);
 		color: #FFF;
-    width: 100%;
-		padding: 30px;
+    width: 57%;
+    height: 105px;
+		padding: 31px;
     position: absolute;
     bottom: 330px;
     font-size: 30px;
+    right: 0px;
+    p{
+      border-left: 2px solid #D8A800;
+      align-items: right;
+      line-height: 25px;
+      text-align: right;
+    }
+  }
+}
+.infoContacto{
+   margin: 20px;
+  &__one{
+    margin: 0px 0px 15px 150px;
+    width: 191px;
+    text-align: justify; 
+    font-family: 'Inter', sans-serif;
+    font-size: 14px;
+  }
+  &__two{
+    width: 191px;
+    text-align: justify;
+    font-family: 'Inter', sans-serif;  
+    font-size: 14px;
+  }
+  &__three{
+    margin: 0px 0px 0px 150px;
+    width: 191px;
+    text-align: justify; 
+    font-family: 'Inter', sans-serif; 
+    font-size: 14px;
+  }
+}
+//login
+.login{
+  background: rgb(12,29,46);
+  background: linear-gradient(-195deg, rgba(12,29,46,0.5) 35%, rgba(12,29,46,0.5) 51%);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  margin: 60px 30px;
+  padding: 20px;
+  border-radius: 20px;
+  img{
+    align-items: center;
+    width: 100px;
+    height:auto;
+  }
+  &__title.title{
+    margin-bottom: 30px;
+    font-size: 16px;
+    border-bottom: 2px solid #D8A800;
+  }
+  &__formLogin{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center; 
+    &__box{
+      .form-group{
+        border-radius: 10px;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        padding: 5px;
+        width: 300px;
+        font-size: 14px;
+        font-family: 'Raleway', sans-serif;
+
+        label{
+          text-align: center;
+          font-size: 1.6rem;
+        }
+
+        .icono{
+         display: flex;
+         gap:10px;
+         img{
+           width: 20px;
+          }     
+        }
+      }
+    }
+    button{
+      background: #1A3A58;
+      border-color: #1A3A58;
+      font-size: 13px;
+      color: white !important;
+      font-weight: 600;
+      width: 100px;
+      height:auto;
+      display: flex;
+      align-items: center;
+      justify-content: center; 
+    }
+    .form-group.form-check{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+  } 
+  .content-form{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 20px auto;
+    label{
+        font-size: 1.4rem;
+    }
+    input{
+        width: 300px;
+    }
+    button{
+        text-align: center;
+        width: 100%;
+        background-color: #020202;
+        border: none;
+        font-size: 1.4rem;
+        margin: 20px auto;
+    }
+   .modal-title{
+    font-size: 2rem;
+    }
+  }
+} 
+//usuario
+.usuario{
+  margin: 30px;
+  .user{
+    text-align: center;
+    font-size: 20px;
+    border-bottom: 2px solid #D8A800;
+    img{
+      width: 45px;
+      height: 45px;
+    }
+  }
+}  
+.caja{
+  margin-bottom: 150px;
+  margin-top: 150px;
+  font-size: 14px;
+  text-align: center;
+  line-height: 20px;
+  display: flex;
+  justify-content: space-evenly;
+  img{
+    width: 30px;
+    height: 30px;
   }
 }
 footer{
