Aavance vista usuario

--- a/pug/usuario.pug
+++ b/pug/usuario.pug
@@ -9,12 +9,12 @@ block content
         section.citas 
             .citas__principal
                 img(src="images/iconos/calendario.svg", alt="")
-                p Proximas #[br] Citas
+                a(href='proximascitasU.html') Proximas #[br] Citas
         section.bitacora 
             .bitacora__principal
                 img(src="images/iconos/book.svg", alt="")
-                p Bitacora de #[br]servicio
+                a(href='bitacoraU.html') Bitacora de #[br]servicio
         section.descargas   
             .descargas__principal 
                 img(src="images/iconos/descargas.svg", alt="")
-                p Descargas 
+                a(href='descargasU.html') Descargas 
