--- a/css/style.css
+++ b/css/style.css
@@ -715,6 +715,7 @@ header .menu__img {
   margin: 30px;
 }
 .usuario .user {
+  margin-top: 85px;
   text-align: center;
   font-size: 20px;
   border-bottom: 2px solid #D8A800;
@@ -725,7 +726,7 @@ header .menu__img {
 }
 .caja {
   margin-bottom: 150px;
-  margin-top: 150px;
+  margin-top: 100px;
   font-size: 14px;
   text-align: center;
   line-height: 20px;
@@ -739,6 +740,148 @@ header .menu__img {
 .caja img {
   width: 30px;
   height: 30px;
+}
+.caja a {
+  color: #020202;
+  display: block;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-decoration: none;
+  list-style: none;
+}
+.titulo__citasU {
+  margin: 35px;
+  font-size: 30px;
+  text-align: center;
+  border-bottom: 2px solid #D8A800;
+}
+.buscar__citasU {
+  margin: 15px;
+  margin-bottom: 35px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  font-size: 12px;
+}
+.proximascitasU {
+  font-size: 14px;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  width: auto;
+  margin: 0 auto;
+  margin-bottom: 40px;
+  padding: 5px;
+  background-color: #f5f5f5;
+}
+.proximascitasU label {
+  display: block;
+  margin-bottom: 10px;
+}
+.proximascitasU input[type="date"] {
+  width: 80%;
+  padding: 5px;
+  border: 1px solid #ccc;
+}
+.proximascitasU input[type="submit"] {
+  background-color: #D8A800;
+  color: #fff;
+  padding: 5px 10px;
+  border: none;
+  cursor: pointer;
+}
+.proximascitasU span {
+  font-weight: bold;
+  color: #333;
+}
+.titulo__bitacoraU {
+  margin: 35px;
+  font-size: 30px;
+  text-align: center;
+  border-bottom: 2px solid #D8A800;
+}
+.buscar__bitacoraU {
+  margin: 15px;
+  margin-bottom: 35px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  font-size: 12px;
+}
+.titulo__descargasU {
+  margin: 35px;
+  font-size: 30px;
+  text-align: center;
+  border-bottom: 2px solid #D8A800;
+}
+.buscar__descargasU {
+  margin: 15px;
+  margin-bottom: 35px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  font-size: 12px;
+}
+.buscar__descargasU label {
+  margin: 5px;
+}
+table.table tr th,
+table.table tr td {
+  border-color: #e9e9e9;
+  padding: 12px 15px;
+  vertical-align: middle;
+}
+table.table tr th:first-child {
+  width: 100px;
+}
+table.table tr th:last-child {
+  width: 100px;
+}
+table.table-striped tbody tr:nth-of-type(odd) {
+  background-color: #fcfcfc;
+}
+table.table-striped .table-hover tbody tr:hover {
+  background: #f5f5f5;
+}
+table.table th i {
+  cursor: pointer;
+  font-size: 13px;
+  margin: 0 5px;
+}
+table.table td:last-child i {
+  font-size: 22px;
+  margin: 0 5px;
+  opacity: 0.9;
+}
+table.table td a {
+  color: #566787;
+  display: inline-block;
+  font-weight: bold;
+  outline: none !important;
+  text-decoration: none;
 }
 footer {
   background-color: #1A3A58;
