--- a/css/style.less
+++ b/css/style.less
@@ -577,6 +577,7 @@ header {
 .usuario{
   margin: 30px;
   .user{
+    margin-top: 85px;
     text-align: center;
     font-size: 20px;
     border-bottom: 2px solid #D8A800;
@@ -588,7 +589,7 @@ header {
 }  
 .caja{
   margin-bottom: 150px;
-  margin-top: 150px;
+  margin-top: 100px;
   font-size: 14px;
   text-align: center;
   line-height: 20px;
@@ -597,6 +598,152 @@ header {
   img{
     width: 30px;
     height: 30px;
+  }
+  a{
+    color: #020202;
+    display: block;
+    flex-direction: column;
+    text-decoration: none;
+    list-style: none;
+  }
+}
+//proximas citas usuario
+.titulo__citasU{
+  margin: 35px;
+  font-size: 30px;
+  text-align: center;
+  border-bottom: 2px solid #D8A800;
+}
+
+.buscar__citasU{
+  margin: 15px;
+  margin-bottom: 35px;
+  display: flex;
+  justify-content: center;
+  font-size: 12px;
+}
+
+.proximascitasU{
+  font-size: 14px;
+  align-items: flex-start;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  width: auto;
+  margin: 0 auto;
+  margin-bottom: 40px;
+  padding: 5px;
+  background-color: #f5f5f5;
+
+  label {
+    display: block;
+    margin-bottom: 10px;
+  }
+
+  input[type="date"] {
+    width: 80%;
+    padding: 5px;
+    border: 1px solid #ccc;
+  }
+
+  input[type="submit"] {
+    background-color: #D8A800;
+    color: #fff;
+    padding: 5px 10px;
+    border: none;
+    cursor: pointer;
+  }
+  span {
+    font-weight: bold;
+    color: #333;
+  }
+}
+//bitacoras de servicios usuario
+.titulo__bitacoraU{
+  margin: 35px;
+  font-size: 30px;
+  text-align: center;
+  border-bottom: 2px solid #D8A800;
+}
+.buscar__bitacoraU{
+  margin: 15px;
+  margin-bottom: 35px;
+  display: flex;
+  justify-content: center;
+  font-size: 12px;
+}
+//descargas usuario
+.titulo__descargasU{
+  margin: 35px;
+  font-size: 30px;
+  text-align: center;
+  border-bottom: 2px solid #D8A800;
+}
+.buscar__descargasU{
+  margin: 15px;
+  margin-bottom: 35px;
+  display: flex;
+  justify-content: center;
+  font-size: 12px;
+  label{
+    margin: 5px;
+  }
+}
+table{
+  &.table tr th, &.table tr td{
+      border-color: #e9e9e9;
+      padding: 12px 15px;
+      vertical-align: middle;
+  }
+  &.table tr th:first-child{
+      width: 100px;
+  }
+  &.table tr th:last-child{
+      width: 100px;
+  }
+  &.table-striped{
+      tbody{
+          tr{
+              &:nth-of-type(odd){
+                  background-color: #fcfcfc;
+              }
+          }
+      }
+      .table-hover{
+          tbody{
+              tr{
+                  &:hover{
+                      background: #f5f5f5;
+                  }  
+              }
+          }
+      }
+  }
+  &.table{
+      th{
+          i{
+              cursor: pointer;
+              font-size: 13px;
+              margin: 0 5px;
+          }
+      }
+      td{
+          &:last-child{
+              i{
+                  font-size: 22px;
+                  margin: 0 5px;
+                  opacity: 0.9;   
+              }
+          }
+          a{
+              color: #566787;
+              display: inline-block;
+              font-weight: bold;
+              outline: none !important;
+              text-decoration: none;
+          }
+      }
   }
 }
 footer{
