--- a/pug/login.pug
+++ b/pug/login.pug
@@ -6,12 +6,12 @@ block content
         form.login__formLogin
             .login__formLogin__box.box
                 .form-group
-                    label(for='exampleInputEmail1') #[strong Email address]
+                    label(for='exampleInputEmail1') #[strong Usuario]
                     .icono 
                         img(src="/images/iconos/maillogin.svg", alt="")
                         input#exampleInputEmail1.form-control(type='email' aria-describedby='emailHelp' placeholder='Enter email')
                 .form-group
-                    label(for='exampleInputPassword1') #[strong Password]
+                    label(for='exampleInputPassword1') #[strong Contraseña]
                     .icono 
                         img(src="images/iconos/password.svg", alt="")
                         input#exampleInputPassword1.form-control(type='password' placeholder='Password')
