--- a/css/style.less
+++ b/css/style.less
@@ -791,4 +791,35 @@ footer{
       }
     }
   }
+  .footer__foot{
+    background-color: #1A3A58;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    height: 81px;
+    margin: 0;
+    p{
+     margin: 0;
+    }
+    .divisor{
+      display: none;
+    }
+    .rights{
+      p{
+        font-size: 12px;
+        text-align: center;
+        margin: 0;
+        border-bottom: 1px solid #fff;
+      }
+    }
+    .link__jmc{
+      a{
+        font-size: 12px;
+        text-decoration: none;
+        color: #fff;
+      }
+    }
+  }
 }
