--- a/pug/bitacoraU.pug
+++ b/pug/bitacoraU.pug
@@ -1,11 +1,11 @@
-extend ../components/template.pug
+extend ../components/template-usuario.pug
 block content 
     .titulo__bitacoraU 
         p #[strong Bitacora de Servicios]
     .buscar__bitacoraU 
-        <label for="buscador">Buscar:</label>
-         <input type="search" id="buscador" name="q" placeholder="Escribe tu busqueda aqui">
-         <input type="submit" value="Buscar">
+         label(for='buscador') 
+         input(type='text' placeholder='Search..' name='search')
+         button(type='submit') Buscar
     table.table.table-striped.table-hover
                     thead 
                         tr                  
@@ -22,4 +22,4 @@ block content
                             td 002
                             td 02/30/2023 
                             td 
-                                a(href="#verzualizarProductoModal" data-toggle='modal') detalles...      
+                                a(href="#verzualizarProductoModal" data-toggle='modal') detalles... 
