--- a/pug/descargasU.pug
+++ b/pug/descargasU.pug
@@ -1,8 +1,8 @@
-extend ../components/template.pug
+extend ../components/template-usuario.pug
 block content 
     .titulo__descargasU 
         p #[strong Descargas]
     .buscar__descargasU 
-        <label for="buscador">Buscar:</label>
-         <input type="search" id="buscador" name="q" placeholder="Escribe tu busqueda aqui">
-         <input type="submit" value="Buscar">
+        label(for='buscador') 
+        input(type='text' placeholder='Search..' name='search')
+        button(type='submit') Buscar
