Aavance vista ADMIN2

--- a/components/header-admin.pug
+++ b/components/header-admin.pug
@@ -8,12 +8,12 @@ header
                 li.menu__item 
                     a(href="listaclientes.html").menu__link Lista de Clientes
                 li.menu__item 
-                    a(href="#.html").menu__link Bitacoras de servicios
+                    a(href="bitacorasadmin.html").menu__link Bitacoras de servicios
                 li.menu__item 
-                    a(href="#.html").menu__link Proximas citas 
+                    a(href="pcitasadmin.html").menu__link Proximas citas 
                 li.menu__item 
-                    a(href="#.html").menu__link Descargas
+                    a(href="descargasadmin.html").menu__link Descargas
                 li.menu__item 
-                    a(href="#").menu__link Cerrar Sesion 
+                    a(href="login.html").menu__link Cerrar Sesion 
             .menu__hamburger 
                 img(src="images/iconos/menu.svg" alt="icono de menu").menu__img
