--- a/components/header-usuario.pug
+++ b/components/header-usuario.pug
@@ -13,6 +13,6 @@ header
                 li.menu__item 
                     a(href="descargasU.html").menu__link Descargas
                 li.menu__item 
-                    a(href="#").menu__link Cerrar Sesion 
+                    a(href="login.html").menu__link Cerrar Sesion 
             .menu__hamburger 
                 img(src="images/iconos/menu.svg" alt="icono de menu").menu__img
