--- a/css/style.less
+++ b/css/style.less
@@ -746,6 +746,21 @@ table{
       }
   }
 }
+
+//vista admin
+.clientes{
+  margin: 30px;
+  .cliente{
+    margin-top: 85px;
+    text-align: center;
+    font-size: 20px;
+    border-bottom: 2px solid #D8A800;
+    img{
+      width: 45px;
+      height: 45px;
+    }
+  }
+} 
 footer{
   background-color: #1A3A58;
   color: #ffff;
